<resources>
    <string name="app_name">SSFS Lunch Menu</string>
    <string-array name="weekdays_array">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
    </string-array>
    <string name="lunch_entree_label">Lunch Entree</string>
    <string name="vegetarian_label">Vegetarian Entree</string>
    <string name="soups_label">Souper Soups</string>
    <string name="sides_label">Sides</string>
    <string name="deli_label">Downtown Deli</string>
</resources>
